<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".MainActivity">

    <Space
        android:layout_width="match_parent"
        android:layout_height="38dp" />

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center"
        android:src="@drawable/logo_trans"
        android:contentDescription="@string/app_name"/>

    <EditText
        android:id="@+id/et_username"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:hint="@string/username_hint"
        android:maxLines="1"
        android:autofillHints="username"
        android:inputType="textNoSuggestions" />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:maxLines="1"
        android:autofillHints="password"/>


    <Button
        android:id="@+id/button_log"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:text="@string/login"
        android:onClick="BT_logIn_onClick"/>

    <Button
        android:id="@+id/button_sign"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:text="@string/sign"
        android:onClick="BT_signUp_onClick"/>
</LinearLayout>